freesia/manifests/navidrome/old-k8s/navidrome-filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: filebrowser
